# campo

./: .gitignore  CMakeLists.txt  README.md  camera_utils.hpp  diagram.drawio  main.cpp
.github/workflows/: file_end_check.yml  multiplatform_check.yml  rules.yml
.github/workflows/scripts/: newline.py
application/: CMakeLists.txt
application/camera_view/: CMakeLists.txt  camera_grid_view.cpp  camera_grid_view.hpp  camera_single_view.cpp  camera_single_view.hpp  camera_types.hpp  camera_utils.cpp  camera_utils.hpp  camera_view_adapter.cpp  camera_view_adapter.hpp  camera_view_controller.cpp  camera_view_controller.hpp
application/detections/: CMakeLists.txt  detection_algorithms.hpp  detection_factory.hpp  detection_interface.hpp  geometric_shapes_detector.hpp
application/gui/: CMakeLists.txt  README.md  camera_menu.hpp  detection_visualization.hpp  detections_menu.hpp  filter_menu.hpp  grid_display.hpp  gui_utils.hpp  menu.hpp  menu_bar.hpp  panel_renderer.hpp  shortcuts.hpp  view.hpp  welcome_view.hpp
application/gui/glfw/: utils.hpp
application/image/: CMakeLists.txt
application/image/decorator/: CMakeLists.txt  filter_decorators.hpp
application/image/filter/: CMakeLists.txt  add_filter_at_index_command.hpp  add_filter_command.cpp  add_filter_command.hpp  filter_command.cpp  filter_command.hpp  filter_command_receiver.hpp  remove_filter_command.cpp  remove_filter_command.hpp  remove_specific_filter_command.hpp  toggle_filter_command.hpp
application/image/history/: CMakeLists.txt  command.hpp  command_history.hpp  remove_top_filter_command.cpp  remove_top_filter_command.hpp
application/image/image_process/: CMakeLists.txt  image_processor.hpp  image_processor_manager.hpp
application/image/region/: CMakeLists.txt  region_selector.hpp
common/: CMakeLists.txt  camera_stream.hpp
gui/: CMakeLists.txt  grid_display.hpp  gui_constants.hpp  gui_utils.hpp  menu.hpp  shortcuts.hpp
test/: CMakeLists.txt
test/utils/: camera_test.cpp
utils/: CMakeLists.txt  callback_handler.cpp  callback_handler.hpp  camera.cpp  camera.hpp  conversions.hpp  filter_decorators.hpp  frame.hpp  gui.hpp  image_processor.hpp  json.hpp  texture_utils.hpp  utils.cmake
